# skyscribe-cli

./: README.md  dockerfile  pyproject.toml
adapters/tinyllama-lora/: adapter_config.json
src/skyscribe/: cli.py
src/skyscribe/agents/: features.py  ingestion.py  writer.py
src/skyscribe/model/: load.py  templater.py  train.py
src/skyscribe/utils/: printing.py
src/skyscribe_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
