[project]
name = "skyscribe-cli"
version = "0.0.1"
description = "CLI multi-agent weather briefs from open data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pytz>=2024.1",
  "python-dateutil>=2.9.0.post0",
  "pandas>=2.2.2",
]

[project.scripts]
skyscribe = "skyscribe.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
